--- a/styles.css
+++ b/styles.css
@@ -11,27 +11,30 @@
 
 body {
     background-color: #BBBBBB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .container {
     width: 375px;
     background-color: #E5E5E5;
-    margin: 0 auto;
-    margin-top: 100px;
 
 }
 
 header {
     background-color: #1B83E2;
     height: 66px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
 
 h1 {
     font-size: 24px;
     color: #F4F4F4;
-    text-align: center;
-    padding-top: 25px;
 
 }
 
@@ -105,11 +108,18 @@ section {
     border: 1px solid #1B83E2;
     border-radius: 4px;
     color: #E5E5E5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
 }
 
 .reference-container {
-    text-align: center;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3px;
 }
 
 .reference-container {
@@ -123,10 +133,4 @@ section {
     font-weight: bold;
     color: #1B83E2;
 
-}
-
-.imagen {
-    margin: 15px auto;
-    display: block;
-    
 }
